catalog-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-v2
  labels:
    app: catalog
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
      version: v2
  template:
    metadata:
      labels:
        app: catalog
        version: v2
    spec:
      containers:
        - image: deepakg23/catalog:v2
          imagePullPolicy: Always
          name: svc
          ports:
            - containerPort: 8080
