catalog-50-50-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog
spec:
  hosts:
    - '*'
  gateways:
    - gateway
  http:
  - route:
      - destination:
          host: catalog.default.svc.cluster.local
          port:
            number: 80
          subset: v1
        weight: 50
      - destination:
          host: catalog.default.svc.cluster.local
          port:
            number: 80
          subset: v2
        weight: 50
