catalog-mirror-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-route
spec:
  hosts:
  - '*'
  gateways:
    - gateway
  http:
  
    - match:
      - uri:
          prefix: "/catalog/v3"
        headers:
          user:
            exact: canary
      rewrite:
        uri: "/catalog"
      route:
      - destination:
          host: catalog.default.svc.cluster.local
          subset: v3
    - match:
      - uri:
          prefix: "/catalog/v1"
      rewrite:
        uri: "/catalog"
      route:
      - destination:
          host: catalog.default.svc.cluster.local
          subset: v1      
  
    - match:
      - uri:
          prefix: "/catalog/v2"
      rewrite:
        uri: "/catalog"
      route:
      - destination:
          host: catalog.default.svc.cluster.local
          subset: v2
      mirror:
        host: catalog.default.svc.cluster.local
        subset: v4
      mirrorPercentage:
        value: 100.0
