catalog-prefix-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-route
spec:
  hosts:
  - '*'
  gateways:
    - gateway
  http:
  - name: "catalog-v1-routes"
    match:
    - uri:
        prefix: "/catalog/v1"
    rewrite:
      uri: "/catalog"
    route:
    - destination:
        host: catalog.default.svc.cluster.local
        subset: v1
  - name: "catalog-v2-routes"
    match:
    - uri:
        prefix: "/catalog/v2"
    rewrite:
      uri: "/catalog"
    route:
    - destination:
        host: catalog.default.svc.cluster.local
        subset: v2
